cmake_minimum_required(VERSION 3.23)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)


add_executable(704BinarySearch 704BinarySearch.cpp)
add_executable(35SearchInsertPosition 35SearchInsertPosition.cpp)
add_executable(34FindFirstandLastPositionofElementinSortedArray 34FindFirstandLastPositionofElementinSortedArray.cpp)
add_executable(69sqrtx 69sqrtx.cpp)
add_executable(367valid-perfect-square 367valid-perfect-square.cpp)
add_executable(27remove-element 27remove-element.cpp)
add_executable(26remove-duplicates-from-sorted-array 26remove-duplicates-from-sorted-array.cpp)
add_executable(283move-zeroes 283move-zeroes.cpp)
add_executable(844backspace-string-compare 844backspace-string-compare.cpp)
add_executable(977squares-of-a-sorted-array 977squares-of-a-sorted-array.cpp)
add_executable(209minimum-size-subarray-sum 209minimum-size-subarray-sum.cpp)
add_executable(904fruit-into-baskets 904fruit-into-baskets.cpp)
add_executable(76minimum-window-substring 76minimum-window-substring.cpp)
add_executable(59spiral-matrix-ii 59spiral-matrix-ii.cpp)
add_executable(54spiral-matrix 54spiral-matrix.cpp)